--- a/smartfit/index.html
+++ b/smartfit/index.html
@@ -23,7 +23,7 @@
             <div class="links-headers">
                 <ul>
                     <li title="Academias">
-                        <a href="#">Academias</a>
+                        <a target="_blank" href="/academia/academia.html">Academias</a>
                     </li>
                     <li title="Espaço do cliente">
                         <a href="#">Espaço do cliente</a>
