--- a/smartfit/index.html
+++ b/smartfit/index.html
@@ -26,7 +26,7 @@
                         <a target="_blank" href="/academia/academia.html">Academias</a>
                     </li>
                     <li title="Espaço do cliente">
-                        <a href="#">Espaço do cliente</a>
+                        <a target="_blank" href="/clientes/clientes.html">Espaço do cliente</a>
                     </li>
                     <li title="Seja um franqueado">
                         <a href="#">Seja um franqueado</a>
