--- a/clientes/clientes.html
+++ b/clientes/clientes.html
@@ -28,5 +28,60 @@
         </div>
 
     </section>
+
+    <!-- GERENCIAR-CONTA -->
+    <section class="gerenciar-conta">
+            <div class="container-contas">
+                    <div class="contas">
+                            <div class="logo-conta">
+                                <img src="https://espacodocliente.smartfit.com.br/images/logo-smartfit-dark.svg" alt="">
+                            </div>
+                            <div class="text-conta">
+                                <strong>Este é o canal de gerenciamento da sua conta.
+
+                                </strong>
+                                <strong>Por aqui você consegue:
+
+                                </strong>
+                            </div>
+                            <div class="text-p">
+                                <ul>
+                                    <li>Atualizar dados pessoais
+                                    </li>
+                                    <li>Consultar histórico de pagamentos
+                                    </li>
+                                    <li>Trocar de unidade
+                                    </li>
+                                    <li>Alterar forma de pagamento
+                                    </li>
+                                    <li>Troca de plano
+                                    </li>
+                                </ul>
+                            </div>
+                    </div>
+                    <div class="formulation">
+                        <div class="text-forms">
+                            <h3>Boas-vindas ao Espaço do Cliente
+                            </h3>
+                            <p>Use seu documento de acesso para gerenciar a sua conta!
+
+                            </p>
+                        </div>
+                        <div class="inputs">
+                                <div class="inputs-cpf">
+                                    <label for="">Documento</label>
+                                    <input type="" name="" id="" placeholder="CPF">
+                                </div>
+                                <div class="text-document">
+                                    <input type="text" placeholder="Seu documento">
+                                </div>
+                            </div>
+                            <div class="btn-entrar">
+                                <button>Entrar</button>
+                            </div>
+
+                    </div>
+            </div>
+    </section>
 </body>
 </html>
