--- a/clientes/clientes.html
+++ b/clientes/clientes.html
@@ -1,16 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+
     <link rel="stylesheet" href="/clientes/css/clientes.css">
     <title>CLIENTES</title>
 
 </head>
+
 <body>
     <!-- HEADERS-GYW -->
     <section class="headers-academy">
@@ -31,57 +32,156 @@
 
     <!-- GERENCIAR-CONTA -->
     <section class="gerenciar-conta">
-            <div class="container-contas">
-                    <div class="contas">
-                            <div class="logo-conta">
-                                <img src="https://espacodocliente.smartfit.com.br/images/logo-smartfit-dark.svg" alt="">
-                            </div>
-                            <div class="text-conta">
-                                <strong>Este é o canal de gerenciamento da sua conta.
+        <div class="container-contas">
+            <div class="contas">
+                <div class="logo-conta">
+                    <img src="https://espacodocliente.smartfit.com.br/images/logo-smartfit-dark.svg" alt="">
+                </div>
+                <div class="text-conta">
+                    <strong>Este é o canal de gerenciamento da sua conta.
 
-                                </strong>
-                                <strong>Por aqui você consegue:
+                    </strong>
+                    <strong>Por aqui você consegue:
 
-                                </strong>
-                            </div>
-                            <div class="text-p">
-                                <ul>
-                                    <li>Atualizar dados pessoais
-                                    </li>
-                                    <li>Consultar histórico de pagamentos
-                                    </li>
-                                    <li>Trocar de unidade
-                                    </li>
-                                    <li>Alterar forma de pagamento
-                                    </li>
-                                    <li>Troca de plano
-                                    </li>
-                                </ul>
-                            </div>
-                    </div>
-                    <div class="formulation">
-                        <div class="text-forms">
-                            <h3>Boas-vindas ao Espaço do Cliente
-                            </h3>
-                            <p>Use seu documento de acesso para gerenciar a sua conta!
-
-                            </p>
-                        </div>
-                        <div class="inputs">
-                                <div class="inputs-cpf">
-                                    <label for="">Documento</label>
-                                    <input type="" name="" id="" placeholder="CPF">
-                                </div>
-                                <div class="text-document">
-                                    <input type="text" placeholder="Seu documento">
-                                </div>
-                            </div>
-                            <div class="btn-entrar">
-                                <button>Entrar</button>
-                            </div>
-
-                    </div>
+                    </strong>
+                </div>
+                <div class="text-p">
+                    <ul>
+                        <li>Atualizar dados pessoais
+                        </li>
+                        <li>Consultar histórico de pagamentos
+                        </li>
+                        <li>Trocar de unidade
+                        </li>
+                        <li>Alterar forma de pagamento
+                        </li>
+                        <li>Troca de plano
+                        </li>
+                    </ul>
+                </div>
             </div>
+            <div class="formulation">
+                <div class="text-forms">
+                    <h3>Boas-vindas ao Espaço do Cliente
+                    </h3>
+                    <p>Use seu documento de acesso para gerenciar a sua conta!
+
+                    </p>
+                </div>
+                <div class="inputs">
+                    <div class="inputs-cpf">
+                        <label for="">Documento</label>
+                        <input type="" name="" id="" placeholder="CPF">
+                    </div>
+                    <div class="text-document">
+                        <input type="text" placeholder="Seu documento">
+                    </div>
+                </div>
+                <div class="btn-entrar">
+                    <button>Entrar</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- FOOTER-CLIENTES -->
+    <section class="footer-clientes">
+        <div class="logo-footer">
+            <img src="https://espacodocliente.smartfit.com.br/logo.svg" alt="">
+        </div>
+        <div class="container-footer">
+            <!-- 1 -->
+            <div class="links-footers">
+                <span>Institucional
+                </span>
+                <li>
+                    <a title="sobre" href="#">Sobre</a>
+                    <a title="conceito" href="#">Conceito</a>
+                    <a title="Investidores" href="#">Investidores</a>
+                    <a title="Central de Ajuda" href="#">Central de Ajuda</a>
+                    <a title="Fale Conosco" href="#">Fale Conosco</a>
+                    <a title="Edital Smart Fit" href="#">Edital Smart Fit</a>
+                    <a title="Portal de Privacidade" href="#">Portal de Privacidade</a>
+                    <a title="Canal de Privacidade" href="#">Canal de Privacidade</a>
+                </li>
+            </div>
+
+            <!-- 2 -->
+            <div class="links-footers">
+                <span>Planos
+                </span>
+                <li title="sobre">
+                    <a title="Planos" href="#">Planos</a>
+                    <a title="Contratos" href="#">Contratos</a>
+                    <a href="#">Beneficios Coporativo</a>
+                </li>
+            </div>
+
+            <!-- 3 -->
+            <div class="links-footers">
+                <span>Corporativo
+                </span>
+                <li title="sobre">
+                    <a title="Imprensa" href="#">Imprensa</a>
+                    <a title="Quero ser franqueado" href="#">Quero ser franqueado</a>
+                    <a title="Divulgue sua marca" href="#">Divulgue sua marca</a>
+                    <a title="Indique um ponto" href="#">Indique um ponto</a>
+                    <a title="Trabalhe Conosco" href="#">Trabalhe Conosco</a>
+                </li>
+            </div>
+
+            <div class="redes-sociais">
+                <div class="text-redes">
+                    <span>siga a smart fit</span>
+                </div>
+                <div class="icones-redes-social">
+                    <div class="icones">
+                        <a title="facebook" href="#">
+                            <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 320 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"></path></svg>
+                        facebook
+                        </a>
+                    </div>
+
+                    <div class="icones">
+                        <a title="Instagram" href="#">
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
+                        Instagram
+                        </a>
+                    </div>
+
+                    <div class="icones">
+                        <a  title="youtube" href="#">
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 576 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path></svg>
+                        youtube
+                        </a>
+                    </div>
+
+                    <div class="icones">
+                        <a  title="Spotify" href="#">
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 496 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M248 8C111.1 8 0 119.1 0 256s111.1 248 248 248 248-111.1 248-248S384.9 8 248 8zm100.7 364.9c-4.2 0-6.8-1.3-10.7-3.6-62.4-37.6-135-39.2-206.7-24.5-3.9 1-9 2.6-11.9 2.6-9.7 0-15.8-7.7-15.8-15.8 0-10.3 6.1-15.2 13.6-16.8 81.9-18.1 165.6-16.5 237 26.2 6.1 3.9 9.7 7.4 9.7 16.5s-7.1 15.4-15.2 15.4zm26.9-65.6c-5.2 0-8.7-2.3-12.3-4.2-62.5-37-155.7-51.9-238.6-29.4-4.8 1.3-7.4 2.6-11.9 2.6-10.7 0-19.4-8.7-19.4-19.4s5.2-17.8 15.5-20.7c27.8-7.8 56.2-13.6 97.8-13.6 64.9 0 127.6 16.1 177 45.5 8.1 4.8 11.3 11 11.3 19.7-.1 10.8-8.5 19.5-19.4 19.5zm31-76.2c-5.2 0-8.4-1.3-12.9-3.9-71.2-42.5-198.5-52.7-280.9-29.7-3.6 1-8.1 2.6-12.9 2.6-13.2 0-23.3-10.3-23.3-23.6 0-13.6 8.4-21.3 17.4-23.9 35.2-10.3 74.6-15.2 117.5-15.2 73 0 149.5 15.2 205.4 47.8 7.8 4.5 12.9 10.7 12.9 22.6 0 13.6-11 23.3-23.2 23.3z"></path></svg>
+                            Spotify
+                        </a>
+                    </div>
+
+                    <div class="icones">
+                        <a  title="Twitter" href="#">
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg>
+                            Twitter
+                        </a>
+                    </div>
+
+                    <div class="icones">
+                        <a  title="Smart Fit News" href="#">
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 448 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M128.081 415.959c0 35.369-28.672 64.041-64.041 64.041S0 451.328 0 415.959s28.672-64.041 64.041-64.041 64.04 28.673 64.04 64.041zm175.66 47.25c-8.354-154.6-132.185-278.587-286.95-286.95C7.656 175.765 0 183.105 0 192.253v48.069c0 8.415 6.49 15.472 14.887 16.018 111.832 7.284 201.473 96.702 208.772 208.772.547 8.397 7.604 14.887 16.018 14.887h48.069c9.149.001 16.489-7.655 15.995-16.79zm144.249.288C439.596 229.677 251.465 40.445 16.503 32.01 7.473 31.686 0 38.981 0 48.016v48.068c0 8.625 6.835 15.645 15.453 15.999 191.179 7.839 344.627 161.316 352.465 352.465.353 8.618 7.373 15.453 15.999 15.453h48.068c9.034-.001 16.329-7.474 16.005-16.504z"></path></svg>
+                            Smart Fit News
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
 </body>
+
 </html>
