create pagina franqueado

--- a/smartfit/index.html
+++ b/smartfit/index.html
@@ -29,7 +29,7 @@
                         <a target="_blank" href="/clientes/clientes.html">Espaço do cliente</a>
                     </li>
                     <li title="Seja um franqueado">
-                        <a href="#">Seja um franqueado</a>
+                        <a target="_blank" href="/franqueado/franqueado.html">Seja um franqueado</a>
                     </li>
                     <div class="btns-buscar">
                         <li title="Buscar academias">
