--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -12,6 +12,9 @@
     <title>FRANQUEADO</title>
 </head>
 <body>
-    
+    <!-- HEADERS-FRANQ -->
+    <section class="heders-franq">
+            <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/9fbeda69-logo-smartfit-light_1000000000000000000028.png" alt="">
+    </section>
 </body>
 </html>
