--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -16,5 +16,10 @@
     <section class="heders-franq">
             <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/9fbeda69-logo-smartfit-light_1000000000000000000028.png" alt="">
     </section>
+
+    <!-- REDES-ACADEMY -->
+    <section class="redes-academy">
+        
+    </section>
 </body>
 </html>
