create redes academy

--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -19,7 +19,20 @@
 
     <!-- REDES-ACADEMY -->
     <section class="redes-academy">
-        
+            <div class="textos-academy">
+                <h2>Faça parte da maior rede
+                    de academias da América Latina 
+                    </h2>
+                    <p>e da maior rede de franquias do segmento fitness do Brasil.
+
+                    </p>
+                    <div class="btn-franqueado">
+                        <button>Quero Ser um franqueado</button>
+                    </div>
+            </div>
+            <div class="img-pessoas">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/27aadcfd-img-0654-copy-1_10o00db0o00c900000j01o.jpg" alt="">
+            </div>
     </section>
 </body>
 </html>
