--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -34,5 +34,77 @@
                 <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/27aadcfd-img-0654-copy-1_10o00db0o00c900000j01o.jpg" alt="">
             </div>
     </section>
+
+    <!-- REVOLUCAO-FITNESS -->
+    <section class="revolucao-fitness">
+        <div class="text-revolucao">
+            <h2>Revolucionamos o <strong>fitness de alto padrão</strong>
+            </h2>
+        </div>
+        <div class="container-revolucao">
+            <!-- 1 -->
+            <div class="itens-revolucao">
+                <div class="img-mais">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/7d19751b-frame-3193_1000000000000000000028.png" alt="">
+                </div>  
+                <div class="valor">
+                    <span>3 milhoes <br>de cilentes</span>
+                    <p>na america latina</p>
+                </div>              
+            </div>
+
+             <!-- 2 -->
+             <div class="itens-revolucao">
+                <div class="img-mais">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/7d19751b-frame-3193_1000000000000000000028.png" alt="">
+                </div>  
+                <div class="valor">
+                    <span>3º grupo que <br>
+                        mais cresce </span>
+                    <p>no mercado fitness <br> mundialmente*
+                    </p>
+                </div>              
+            </div>
+
+             <!-- 3 -->
+             <div class="itens-revolucao">
+                <div class="img-mais">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/7d19751b-frame-3193_1000000000000000000028.png" alt="">
+                </div>  
+                <div class="valor">
+                    <span>1000 <br>
+                        academias</span>
+                    <p>na América latina, sendo <br>
+                         600 só no Brasil
+
+                    </p>
+                </div>              
+            </div>
+
+            <!-- 4 -->
+            <div class="itens-revolucao">
+                <div class="img-mais">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/7d19751b-frame-3193_1000000000000000000028.png" alt="">
+                </div>  
+                <div class="valor">
+                    <span>11º no <br>
+                        ranking global
+                        </span>
+                    <p>das marcas que mais evoluíram <br>
+                         em faturamento**
+
+                    </p>
+                </div>              
+            </div>
+        </div>
+        <div class="btn-franq-black">
+            <button>Quero ser um franqueado</button>
+        </div>
+        <div class="pesquise">
+            <p>*Pesquisa final de 2018 em número de clientes.
+            <br> **Segundo o relatório da IHRSA Global Report 2021.
+            </p>         
+        </div>
+    </section>
 </body>
 </html>
