create section empreenda

--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -106,5 +106,40 @@
             </p>         
         </div>
     </section>
+
+    <!-- EMPREENDA -->
+    <section class="empreenda">
+        <div class="text-empreenda">
+            <h2>Empreenda com a <strong>força da marca Smart Fit</strong>
+            </h2>
+            <p>Visando o nosso maior propósito de democratizar o fitness de alto padrão nossas academias contam com o melhor que há no mercado com um preço acessível.
+            </p>
+        </div>
+        <div class="container-empreenda">
+            <!-- 1 -->
+            <div class="itens-empreenda">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/c664a10e-frame-3205_100000000000000000001o.jpg" alt="">
+            </div>
+            <!-- 2 -->
+            <div class="itens-empreenda">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/506847eb-frame-3204_100000000000000000001o.jpg" alt="">
+            </div>
+
+            <!-- 3 -->
+            <div class="itens-empreenda">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/fc19a288-frame-3203_100000000000000000001o.jpg" alt="">
+            </div>
+
+            <!-- 4 -->
+            <div class="itens-empreenda">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/31d97d4c-frame-3202_100000000000000000001o.jpg" alt="">
+            </div>
+        </div>
+
+        <div class="btn-franq-black">
+            <button>Quero ser um franqueado</button>
+        </div>
+
+    </section>
 </body>
 </html>
