create section mercado

--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -141,5 +141,77 @@
         </div>
 
     </section>
+
+    <!-- MERCADO -->
+    <section class="mercado">
+            <div class="text-mercado">
+                <h2>Conheça <strong>o nosso mercado
+                </strong>
+                !</h2>
+            </div>
+            <div class="container-mercado">
+                    <div class="img-mercado">
+                        <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/d5c79a4c-frame-3264_10ja0c8000000000000028.png" alt="">
+                    </div>
+                    <div class="conteudo-mercado">
+                        <!-- 1 -->
+                        <div class="itens-mercado">
+                            <div class="img-left">
+                                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/bc107461-frame-3298_1000000000000000000028.png" alt="">
+                            </div>
+                            <div class="texto-mercado">
+                                <p>O mercado fitness cresce média de 8,7% anualmente no mundo*;
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- 2 -->
+                        <div class="itens-mercado">
+                            <div class="img-left">
+                                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/bc107461-frame-3298_1000000000000000000028.png" alt="">
+                            </div>
+                            <div class="texto-mercado">
+                                <p>Brasil é o 2º segundo maior país no ranking mundial;
+
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- 3 -->
+                        <div class="itens-mercado">
+                            <div class="img-left">
+                                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/bc107461-frame-3298_1000000000000000000028.png" alt="">
+                            </div>
+                            <div class="texto-mercado">
+                                <p>O setor movimentou + de U$2 bilhões de dólares no país e ocupa 3º posição no ranking de faturamento do mundo;
+                                </p>
+                            </div>
+                        </div>
+
+                        <!-- 4 -->
+                        <div class="itens-mercado">
+                            <div class="img-left">
+                                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/bc107461-frame-3298_1000000000000000000028.png" alt="">
+                            </div>
+                            <div class="texto-mercado">
+                                <p>As academias representam 60% do faturamento total do setor no país**.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="fontes">
+                            <p>*fonte: <a href="#">esbrasil.com.br</a>
+                                <br>
+                                **Segundo o relatório da IHRSA Global Report 2021.
+                            </p>
+                            
+                        </div>
+                    </div>        
+            </div>
+            <div class="btn-franq-black">
+                <button>Quero ser um franqueado</button>
+            </div>
+    </section>
+
 </body>
 </html>
