create section investir

--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -213,5 +213,51 @@
             </div>
     </section>
 
+    <!-- INVESTIR -->
+    <section class="investir">
+        <div class="text-investir">
+            <h2>Invista no nosso ecossistema fitness
+            </h2>
+        </div>
+
+        <div class="container-img">
+            <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/57cacacf-barra-funda-1_100000000000000000001o.jpg" alt="">
+        </div>
+        <div class="textos-p">
+            <p>Visando promover a melhor experiência em uma rotina de treinos e cuidados com a saúde, apresentamos soluções inteligentes ao nosso cliente e disponibilizamos um ecossistema completo para ele utilizar independente de onde estiver.
+            </p>
+        </div>
+        <div class="icones-investir">
+                <!-- 1 -->
+                <div class="itens-investir">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/3e71034a-frame-3208_1000000000000000000028.png" alt="">
+                    <span>Academia</span>
+                </div>
+                <!-- 2 -->
+                <div class="itens-investir">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/9f303b04-frame-3209_1000000000000000000028.png" alt="">
+                    <span>Digital</span>
+                </div>
+
+                <!-- 3 -->
+                <div class="itens-investir">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/a4eca15f-frame-3210_1000000000000000000028.png" alt="">
+                    <span>Casa</span>
+                </div>
+        </div>
+        <div class="celulares">
+            <div class="img-celulares">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/99c94212-cena-iphone-threed-1_1000000000000000000028.png" alt="">
+            </div>
+            <div class="text-celulares">
+                <span>Para fortalecer ainda mais a nova rotina fitness do nosso cliente, oferecemos serviços de consulta com nutricionistas online, plataformas com treinos on demand, suplementação e um serviço de acompanhamento especializado para ele alcançar as suas metas de forma mais rápida e objetiva.
+                </span>
+            </div>
+        </div>
+        <div class="btn-franq-black">
+            <button>Quero ser um franqueado</button>
+        </div>
+    </section>
+
 </body>
 </html>
