create section franquias

--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -259,5 +259,58 @@
         </div>
     </section>
 
+    <!-- FRANQUIAS -->
+    <section class="franquias">
+        <div class="text-franquias">
+            <h2>Tenha todo o suporte para construir uma <strong>franquia de <br>
+                 sucesso</strong>
+            </h2>
+        </div>
+        <div class="container-franquias">
+            <!-- 1 -->
+            <div class="itens-franquias">
+                <div class="img-franquias">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/e918baee-frame-3218_100000000000000000001o.jpg" alt="">
+                </div>
+                <div class="textos-franquias">
+                    <h3>Projeto Arquitetônico
+                    </h3>
+                    <span>A franqueadora oferece tecnologia para escolha do ponto comercial e projeto arquitetônico para as novas unidades franqueadas, respeitando as especificidades locais e atendendo ao design consolidado da marca.
+                    </span>
+                </div>
+            </div>
+
+            <!-- 2 -->
+            <div class="itens-franquias">
+                <div class="img-franquias">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/0bf2ec8a-frame-3265_100000000000000000001o.jpg" alt="">
+                </div>
+                <div class="textos-franquias">
+                    <h3>Marketing Nacional
+                    </h3>
+                    <span>Acesso a um plano de Marketing que engloba todo o país, reforçando a presença da marca. Ferramentas de captação, gestão e relacionamento com clientes. Marca Top of Mind e líder de categoria.</span>
+                </div>
+            </div>
+
+             <!-- 3 -->
+             <div class="itens-franquias">
+                <div class="img-franquias">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/41e17218-frame-3220_100000000000000000001o.jpg" alt="">
+                </div>
+                <div class="textos-franquias">
+                    <h3>Gestão Operacional
+                    </h3>
+                    <span>Acesso a uma equipe de consultoria dedicada às novas unidades, ao longo dos 12 meses iniciais. Após esse período o suporte continua através de um regional para continuarmos garantindo apoio regular e suporte na organização do dia a dia da operação.
+                    </span>
+                </div>
+            </div>
+
+        </div>
+        <div class="btn-franquias">
+            <button>Quero Ser um franqueado</button>
+        </div>
+
+    </section>
+
 </body>
 </html>
