create section forms-franq

--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -364,5 +364,74 @@
             </div>
     </section>
 
+    <!-- FORMS-FRANQ -->
+    <section class="forms-franq">
+            <div class="text-forms">
+                <h2>Quero ser <strong>um franqueado</strong>!
+                </h2>
+                <p>Preencha o formulário abaixo para que a gente possa avaliar o seu perfil! Aproveite e inclua até três sócios* pra embarcar nessa com você!
+                </p>
+            </div>
+
+
+            <div class="container-forms">
+                <div class="forms-one">
+                    <!-- nome -->
+                        <div class="forms-inputs">
+                            <label for="">Nome*</label>
+                            <input type="text" placeholder="Seu nome">
+                        </div>
+                        <!-- email -->
+
+                        <div class="forms-inputs">
+                            <label for="">Email*</label>
+                            <input type="email" placeholder="Contat@email.com.br">
+                        </div>
+                        <!-- renda -->
+
+                        <div class="forms-inputs">
+                            <label for="">Renda mensal *</label>
+                            <input type="email" placeholder="Ex: R$3.000.000,00">
+                        </div>
+                        <!-- numero de  socio -->
+
+                        <div class="forms-inputs">
+                            <label for="">Número de sócios *</label>
+                            <input type="email" placeholder="Maximo 3">
+                        </div>
+                </div>
+                <div class="forms-one">
+                    <!-- telefone -->
+                    <div class="forms-inputs">
+                        <label for="">Telefone*</label>
+                        <input type="tel" placeholder="DDD+ 9 9999-9999">
+                    </div>
+
+                    <!-- cidade -->
+
+                    <div class="forms-inputs">
+                        <label for="">Cidade*</label>
+                        <input type="tel" placeholder="Sua cidade">
+                    </div>
+                    <!-- cidade interrese -->
+
+                    <div class="forms-inputs">
+                        <label for="">Cidade de interrese*</label>
+                        <input type="tel" placeholder="Cidade onde quer abrir a franquia">
+                    </div>
+                    <!-- socios -->
+                    <div class="socios">
+                        <p>*Desses três sócios , pelo menos um precisa ser sócio operador.
+                        </p>
+                    </div>
+                    <div class="btn-enviar">
+                        <button type="submit">Enviar formulário!</button>
+                    </div>
+                </div>
+
+
+            </div>
+    </section>
+
 </body>
 </html>
