create section footer-franq

--- a/franqueado/franqueado.html
+++ b/franqueado/franqueado.html
@@ -428,9 +428,12 @@
                         <button type="submit">Enviar formulário!</button>
                     </div>
                 </div>
-
-
             </div>
+    </section>
+
+    <!-- FOOTER-FRANQ -->
+    <section class="footer-franq">
+        <img src="https://d9hhrg4mnvzow.cloudfront.net/promocao.smartfit.com.br/quero-ser-um-franqueado/9fbeda69-logo-smartfit-light_1000000000000000000028.png" alt="">
     </section>
 
 </body>
