create headers treinos

--- a/smartfit/index.html
+++ b/smartfit/index.html
@@ -117,7 +117,7 @@
 
         </div>
         <div class="link-buscar">
-            <a href="#">Buscar Academia</a>
+            <a target="_parent" href="/academia/academia.html">Buscar Academia</a>
 
         </div>
     </section>
@@ -327,7 +327,7 @@
             </div>
         </div>
         <div class="link-buscar">
-            <a href="#">Ver todas as aulas e treinos</a>
+            <a target="_parent" href="/treinos/treinos.html">Ver todas as aulas e treinos</a>
 
         </div>
 
