--- a/treinos/treinos.html
+++ b/treinos/treinos.html
@@ -1,19 +1,19 @@
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    
+
     <link rel="stylesheet" href="/treinos/css/treinos.css">
     <title>TREINOS</title>
 </head>
+
 <body>
-    
+
     <!-- HEADERS -->
     <section class="headers">
         <div class="headers-links">
@@ -52,5 +52,27 @@
 
         </div>
     </section>
+
+    <!-- FUNCIONAL -->
+    <section class="funcional">
+        <div class="container-funcional">
+            <div class="text-funcional">
+                <h2>É pra dançar, é pra funcional, é pra tudo. É Smart Fit
+                </h2>
+                <p>Um montão de aulas e treinos exclusivos, pra você encontrar qual o seu jeito de ser Fit.
+
+                </p>
+                <div class="btn-escolher-gmy">
+                    <a href="#">Escolha sua academia</a>
+                </div>
+            </div>
+            <div class="img-funcional">
+                <img src="https://landing-pages-smart.s3.amazonaws.com/modalidades-treinos/banner1.png" alt="">
+
+            </div>
+        </div>
+
+    </section>
 </body>
+
 </html>
