create section curtir

--- a/treinos/treinos.html
+++ b/treinos/treinos.html
@@ -957,6 +957,26 @@
         </div>
 
     </section>
+
+    <!-- CURTIR -->
+    <section class="curtir">
+        <div class="text-curtir">
+            <h2>Curtiu? vem treinar com a gente!
+            </h2>
+        </div>
+        <div class="formas-pagar">
+            <h4>planos a partir de</h4>
+            <div class="reias">
+                <strong>R$ 99,90</strong>
+            </div>
+            <p>Encontre o seu jeito de ser Fit com a gente, busque pela unidade mais próxima agora.
+
+            </p>
+        </div>
+        <div class="btn-curtir">
+            <a href="#">Eu quero!</a>
+        </div>
+    </section>
 </body>
 
 </html>
