--- a/smartfit/index.html
+++ b/smartfit/index.html
@@ -547,7 +547,7 @@
                     </p>
                 </div>
                 <div class="links-saiba-mais">
-                    <a href="#">
+                    <a target="_parent" href="/conhecer/conhecer.html">
                         saiba mais
                     </a>
                 </div>
