--- a/treinos/treinos.html
+++ b/treinos/treinos.html
@@ -974,7 +974,7 @@
             </p>
         </div>
         <div class="btn-curtir">
-            <a href="#">Eu quero!</a>
+            <a target="_parent" href="/academia/academia.html">Eu quero!</a>
         </div>
     </section>
 
