create section descubra

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+
     <link rel="stylesheet" href="/conhecer/css/conhecer.css">
     <title>CONHECER</title>
 </head>
+
 <body>
     <!-- HEADERS-CONHECER -->
     <section class="headers-conhecer">
@@ -25,5 +27,27 @@
             </ul>
         </div>
     </section>
+
+    <!-- DESCUBRA -->
+    <section class="descubra">
+        <div class="container-descubra">
+            <div class="text-descubra">
+                <h2>DESCUBRA O <br>  SMART FIT <strong>COACH</strong>:
+                </h2>
+                <p>A consultoria online <br>
+                    personalizada para <br>
+                    elevar seu treino
+
+                </p>
+                <div class="btn-assinar">
+                    <a href="#">Assine já</a>
+                </div>
+            </div>
+            <div class="img-descubra">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/f3b8d149-banner-coach-lp_10fp0el000000000000028.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
