create section descubra

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -47,6 +47,14 @@
                 <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/f3b8d149-banner-coach-lp_10fp0el000000000000028.png" alt="">
             </div>
         </div>
+        <div class="text-p">
+            <p>Você quer resultados reais no seu treino, adaptados às suas necessidades e objetivos?
+            </p>
+            <p>O <strong>Smart Fit Coach oferece</strong>
+                 uma consultoria de treino online personalizada, proporcionando uma
+                  <strong>experiência única para impulsionar seu condicionamento físico</strong>, mesmo se ainda não for aluno Smart Fit
+            </p>
+        </div>
     </section>
 </body>
 
