create section ESPECIALISTA

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -220,6 +220,21 @@
                 <a href="#"><span>Eu quero!</span></a>
         </div>
     </section>
+
+    <!-- ESPECIALISTAS -->
+    <section class="especialista">
+            <div class="text-especialista">
+                <h2>Seja qual for seu objetivo,
+                </h2>
+                <h2><strong>conte com um especialista pronto</strong> para te ajudar
+                </h2>
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/85484ba5-group-176-1-1_10000000p20de000019028.png" alt="">
+            <div class="btn-quero-especialista">
+                <a href="#"><span>Eu quero!</span></a>
+            </div>
+            
+            </div>
+    </section>
 </body>
 
 </html>
