create section COMO FUNCIONA

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -211,29 +211,82 @@
 
                 </div>
                 <div class="textos-p">
-                    <p>Consultas e treinos  no conforto da sua casa, academia, parque  ou qualquer lugar  que você esteja.
+                    <p>Consultas e treinos  no conforto da sua casa, academia, parque  ou qualquer lugar  que você
+                        esteja.
                     </p>
                 </div>
             </div>
         </div>
         <div class="btn-quero-smart-coach">
-                <a href="#"><span>Eu quero!</span></a>
+            <a href="#"><span>Eu quero!</span></a>
         </div>
     </section>
 
     <!-- ESPECIALISTAS -->
     <section class="especialista">
-            <div class="text-especialista">
-                <h2>Seja qual for seu objetivo,
-                </h2>
-                <h2><strong>conte com um especialista pronto</strong> para te ajudar
-                </h2>
-                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/85484ba5-group-176-1-1_10000000p20de000019028.png" alt="">
+        <div class="text-especialista">
+            <h2>Seja qual for seu objetivo,
+            </h2>
+            <h2><strong>conte com um especialista pronto</strong> para te ajudar
+            </h2>
+            <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/85484ba5-group-176-1-1_10000000p20de000019028.png"
+                alt="">
             <div class="btn-quero-especialista">
                 <a href="#"><span>Eu quero!</span></a>
             </div>
-            
+
+        </div>
+    </section>
+
+    <!-- COMO-FUNCIONA -->
+    <section class="como-funciona">
+        <div class="container-funcionas">
+            <div class="img-funcionas">
+                <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/25404f5b-escolher-profissional_109n0h3000000000000028.png"
+                    alt="">
             </div>
+            <div class="lado-text">
+                <div class="texts-funcionas">
+                    <h3>Como <strong>funciona</strong>
+                    </h3>
+                </div>
+                <!-- 1 -->
+                <div class="texts-sub">
+                    <span><strong>1</strong>. AGENDE SUA CONSULTA PELO <strong>SMART FIT APP</strong>
+                    </span>
+                    <p>Escolha um professor conforme o seu objetivo,  selecione dia e horário de acordo com sua
+                        conveniência.
+                    </p>
+                </div>
+                <!-- 2 -->
+                <div class="texts-sub">
+                    <span><strong>2 ATENDIMENTO ONLINE</strong> POR VÍDEOCHAMADA
+                    </span>
+                    <p>Receba orientações personalizadas e tire suas dúvidas  com nosso Coach.
+
+                    </p>
+                </div>
+
+                <!-- 3 -->
+                <div class="texts-sub">
+                    <span><strong>3 SEU TREINO</strong> DIRETO NO APP
+                    </span>
+                    <p>Seu treino é enviado diretamente para o Smart Fit App,  facilitando a sua execução.
+                    </p>
+                </div>
+
+                <!-- 4 -->
+                <div class="texts-sub">
+                    <span><strong>4 CHAT</strong> ILIMITADO
+                    </span>
+                    <p>Tire suas dúvidas entre suas consultas  com seu professor em nosso chat ilimitado.
+                    </p>
+                </div>
+                <div class="btn-quero-funcionas">
+                    <a href="#"><span>Eu quero!</span></a>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
