create section ASSINAR PLANO

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -288,6 +288,37 @@
             </div>
         </div>
     </section>
+
+    <!-- ASSINAR-PLANOS -->
+    <section class="assinar-planos">
+            <div class="text-planos">
+                <h2>Assine agora seu <strong>plano Smart Fit Coach</strong>
+                </h2>
+            </div>
+            <div class="container-planos">
+                <div class="imgs-planos">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/75bac3f3-group-187_106c020000000000000028.png" alt="">
+                </div>
+                <div class="text-li">
+                    <li>12 consultas online com o coach
+                    </li>
+                    <li>Treinos personalizados
+                    </li>
+                    <li>Chat ilimitado com o professor
+                    </li>
+                </div>
+                <div class="dolar">
+                    <p>R$  <strong>39</strong></p>
+                    <div class="valor">
+                        <p>,90 / <span>mes</span></p>
+                        <span class="anual">No plano anual</span>
+                    </div>
+                </div>
+            </div>
+            <div class="btn-quero-plano">
+                <a href="#"><span>Eu quero!</span></a>
+            </div>
+    </section>
 </body>
 
 </html>
