create section RESULTADOS

--- a/conhecer/conhecer.html
+++ b/conhecer/conhecer.html
@@ -319,6 +319,30 @@
                 <a href="#"><span>Eu quero!</span></a>
             </div>
     </section>
+
+    <!-- RESULTADOS -->
+    <section class="resultados">
+            <div class="text-resultados">
+                <h2><strong>Foque</strong> nos resultados
+                </h2>
+            </div>
+            <div class="container-resultados">
+                <div class="img-resultados">
+                    <img src="https://d9hhrg4mnvzow.cloudfront.net/coach.smartfit.com.br/conheca/b43bc3eb-rectangle-67-1_10c2084000000000000028.png" alt="">
+                </div>
+                <div class="textos-resultados">
+                        <div class="result-text">
+                            <p>Chegue a um novo nível de treino, alcance mais resultados e transforme sua rotina fitness com a 
+                                <strong>consultoria online de treino Smart Fit Coach.</strong> Chegou a hora de ter um professor coach de academia com treino personalizado!
+
+                            </p>
+                            <div class="btn-quero-result">
+                                    <a href="#"><span>Eu quero!</span></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+    </section>
 </body>
 
 </html>
